--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "front-end micro service testing",
   "private": true,
   "files": [
-    "generators"
+    "app",
+    "router"
   ],
   "keywords": ["yeoman-generator"],
   "dependencies": {
