--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "micro-service",
   "version": "0.0.0",
   "description": "front-end micro service testing",
+   "main": "app/index.js",
   "files": [
     "app",
     "router"
